examples/datalog/38_syntax_gaps/01_scientific_notation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_sci_notation
Knowledge graph 'test_sci_notation' created.
Switched to knowledge graph: test_sci_notation
> .kg use test_sci_notation
Switched to knowledge graph: test_sci_notation
> +floats[(1, 1.0e10), (2, 1e-5), (3, 2.5e3), (4, -1.5e-2)].
Inserted 4 fact(s) into 'floats'.
> ?- floats(Id, V).
4 rows:
  (1, 10000000000.0)
  (2, 0.00001)
  (3, 2500.0)
  (4, -0.015)
> +computed(X, V * 2) :- floats(X, V).
Script error: Parse error: Invalid term: 'V * 2'
