examples/datalog/38_syntax_gaps/01_scientific_notation.dl
% Test: Scientific Notation for Floats
% Category: 38_syntax_gaps
% Description: Tests parsing and computation with scientific notation floats

.kg create test_sci_notation
.kg use test_sci_notation

% Insert floats using scientific notation
+floats[(1, 1.0e10), (2, 1e-5), (3, 2.5e3), (4, -1.5e-2)].
?- floats(Id, V).

% Test arithmetic with scientific notation
+computed(X, V * 2) :- floats(X, V).
?- computed(X, Y).

.kg use default
.kg drop test_sci_notation
